syntax = "proto3";

package user;

import "./common/common.proto";

message User {
  string name = 1;
  string email = 2;
  string phone = 3;
  string card = 4;
  string address = 5;
  string password = 6;
}

message UserCreateRequest {
  User user = 1;
  string repassword = 2;
}

message UserResponse {
	common.Id id = 1;
 	User user = 2;
}

message UserUpdateRequest {
	common.Id id = 1;
  User user = 2;
  string repassword = 3;
}

message EmailRequest {
	string email = 1;
}

service UserService {
	rpc GetUser(EmailRequest) returns (UserResponse) {}
	rpc DeleteUser(common.Id) returns (UserResponse) {}
	rpc AddUser(UserCreateRequest) returns (UserResponse) {}
	rpc GetUsers(common.Empty) returns (stream UserResponse) {}
	rpc UpdateUser(UserUpdateRequest) returns (UserResponse) {}
}